--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header class="header">
     <div class="container header-container">
       <a href="#" class="logo">
-        <img src="img/logo.svg" alt="BannerTech Logo">
+        <img src="/img/logo.png alt="BannerTech Logo">
         <span>BannerTech</span>
       </a>
       <nav class="nav-menu">
